# ModeDetectability

./: README.md  pyproject.toml
data/: GW190521_posterior_samples.h5  rhOverM_ringdown_QNMs.h5
notebooks/: Example.ipynb
