[project]
name = "modedetectability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "lalsuite>=7.26.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "ringdown",
    "scri>=2024.0.2",
]

[tool.uv.sources]
ringdown = { git = "https://github.com/maxisi/ringdown.git" }
